
ACLOCAL_AMFLAGS = -I m4 --install

lib_LTLIBRARIES = libmysht.la

libmysht_la_SOURCES = myScopeHashTable.c myScopeHashTable.h

libmysht_la_CFLAGS = -Wall -W -pedantic -O3

libmysht_la_LDFLAGS = -version-info 1:0:0

include_HEADERS = myScopeHashTable.h   # In include, install header

# bin_PROGRAMS = hello
# hello_SOURCES = hello.c
# hello_LDADD = $(lib_LTLIBRARIES)   # Program uses library

